Manager Module  (#525)
* add media field,
=> not completly implemented

* add mediamanager to media input field

* fix security issue in remote method execution

* add buttons to toolbar

* fix renaming issue

* fix more sonar issues

* fix api tests

* fix some sonar issues

* add some example extensions

* check preview mode

* format template

* update demo project
check if running in iframe before adding edit borders

* add icons to editor

* make meta data of section available in using site

* implementation for deleting sections

* refactor manager ui

* make template developing easier for manager

* make builds for linux, windows and mac with embedded jre

* make more messages transletable

* make more messages transletable

* update build for linux, win and mac

* rename start scripts to server.bat/sh

* rename shortcodes to tags

* remove unused extensions and fix field type

* refacotor User and Realm model

* optional 2fa added

* add error messages to login form

* remove char

* thme script to register contenttypes

* fix some issues

* load page and section templates via rpc and hooks

* update content actions

* unify dist build script
add info command for server (version and state)

* refactor visibllity check

* move namespace names to constants

* move namespace names to constants

* fix typo

* register meta form, via hook for contenttypes

* #492 add simple solution for backups

* set backup to nightly

* add extension point for postprocessing the backup file #492

* update cherry markdown editor

* extract backup into module

* simplyfy creation of hooksystem

* remove legacy backup config

* make media meta data editable

* mak image toolbar look the same as the other toolbars

* add preview type to react on manager preview

* make all meta attribute editions open in sidebar

* rename variable

* update cli

* update to typescript

* more translation to typescript

* handle upload filename
add all js to typescript build

* start update media in