@@ -6,15 +6,32 @@
 	<parent>
 		<groupId>com.condation.cms</groupId>
 		<artifactId>cms-parent</artifactId>
-		<version>7.8.0</version>
+		<version>8.0.0</version>
 	</parent>
 	<artifactId>cms-content</artifactId>
 	<packaging>jar</packaging>
-
-	<dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
 		<dependency>
 			<groupId>com.condation.cms</groupId>
 			<artifactId>cms-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.condation.cms</groupId>
+			<artifactId>cms-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.condation.cms</groupId>
